syntax = "proto3";
package message;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message Message {
    uint64 ID = 1;
	uint64 userID = 2;
	string email = 3;
	uint64 tracingID = 4;
	google.protobuf.Timestamp timestamp = 5;
	google.protobuf.Duration TTL = 6;
	string service_name = 7;
	string template_name = 8;
	map<string, string> variables = 9;
}